--- a/index.html
+++ b/index.html
@@ -362,38 +362,6 @@
 <!-- Deal End -->
 
 
-<!-- Feature Start -->
-<div class="container-fluid py-5" style="background-color: #ffe880;">
-    <div class="container">
-        <div class="row g-4">
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
-                <div class="feature-item position-relative" style="background-color: #ffe880; text-align: center; padding: 1rem;">
-                    <div class="border" style="padding: 5rem 1rem; background-color: #ffe880;">
-                        <i class="fa fa-leaf fa-3x" style="color: #333; margin-bottom: 1rem;"></i>
-                        <h5 style="color: #fff; margin-bottom: 0;">100% Natural</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
-                <div class="feature-item position-relative" style="background-color: #ffe880; text-align: center; padding: 1rem;">
-                    <div class="border" style="padding: 5rem 1rem; background-color: #ffe880;">
-                        <i class="fa fa-tint-slash fa-3x" style="color: #333; margin-bottom: 1rem;"></i>
-                        <h5 style="color: #fff; margin-bottom: 0;">Anti Hair Fall</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
-                <div class="feature-item position-relative" style="background-color: #ffe880; text-align: center; padding: 1rem;">
-                    <div class="border" style="padding: 5rem 1rem; background-color: #ffe880;">
-                        <i class="fa fa-times fa-3x" style="color: #333; margin-bottom: 1rem;"></i>
-                        <h5 style="color: #fff; margin-bottom: 0;">Hypoallergenic</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Feature End -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -572,23 +540,38 @@ body{
 
 <section class="feedback-section">
 
-<h2 class="feedback-title">✨ What Our Clients Say</h2>
+<h2 class="feedback-title" style="
+text-align:center;
+font-size:28px;
+font-weight:800;
+font-family:'Poppins',sans-serif;
+background:linear-gradient(45deg,#ffb300,#ff6f00,#ffcc00);
+-webkit-background-clip:text;
+-webkit-text-fill-color:transparent;
+letter-spacing:1px;
+margin:20px 0;
+text-transform:uppercase;
+text-shadow:0 0 8px rgba(255,165,0,0.4);
+">
+ What Our Clients Say 
+</h2>
+
 
 <div class="feedback-slider" id="slider">
 <div class="feedback-track" id="feedbackTrack">
-
 <!-- REVIEW 1 -->
 <div class="feedback-card">
-<img src="logo-placeholder.png" class="card-logo">
+<img src="main.jpg" class="card-logo">
 <div class="product-title">Product Purchased: Night Repair Cream</div>
 <img src="product-image1.png" class="product-img">
 <p class="review-text">
-"After one month, my skin feels firmer and brighter.
-It absorbs beautifully and feels premium."
+"I’ve been using this for 5 weeks now and the difference is honestly visible.
+My skin feels tighter, smoother, and the dullness has reduced a lot.
+Even my sister noticed the glow!"
 </p>
 <div class="client-badge">
-<div class="client-name">Sophia L.</div>
-<div class="client-role">CEO, Digital Agency</div>
+<div class="client-name">Ayesha Khan</div>
+<div class="client-role">Lahore, Pakistan</div>
 <div class="stars">
 <div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
 </div>
@@ -597,16 +580,17 @@ It absorbs beautifully and feels premium."
 
 <!-- REVIEW 2 -->
 <div class="feedback-card">
-<img src="logo-placeholder.png" class="card-logo">
+<img src="main.jpg" class="card-logo">
 <div class="product-title">Product Purchased: Hand & Feet Cream</div>
 <img src="product-image2.png" class="product-img">
 <p class="review-text">
-"My hands were extremely dry before.
-Now they stay soft all day without grease."
+"My hands used to get extremely dry especially in winter.
+After using this cream daily, they stay soft all day without feeling sticky.
+The fragrance is also very pleasant."
 </p>
 <div class="client-badge">
-<div class="client-name">Michael T.</div>
-<div class="client-role">Marketing Manager</div>
+<div class="client-name">Usman Ali</div>
+<div class="client-role">Karachi, Pakistan</div>
 <div class="stars">
 <div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
 </div>
@@ -615,24 +599,118 @@ Now they stay soft all day without grease."
 
 <!-- REVIEW 3 -->
 <div class="feedback-card">
-<img src="logo-placeholder.png" class="card-logo">
+<img src="main.jpg" class="card-logo">
 <div class="product-title">Product Purchased: Brightening Polish</div>
 <img src="product-image3.png" class="product-img">
 <p class="review-text">
-"My skin texture improved visibly.
-Makeup applies smoother and glow lasts longer."
+"I noticed smoother skin texture within just two weeks.
+My makeup applies much better now and my face looks naturally brighter.
+Totally worth the price."
 </p>
 <div class="client-badge">
-<div class="client-name">Emma R.</div>
-<div class="client-role">Beauty Creator</div>
+<div class="client-name">Fatima Noor</div>
+<div class="client-role">Islamabad, Pakistan</div>
 <div class="stars">
 <div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
 </div>
 </div>
 </div>
 
+<!-- REVIEW 4 -->
+<div class="feedback-card">
+<img src="main.jpg" class="card-logo">
+<div class="product-title">Product Purchased: Vitamin C Serum</div>
+<img src="product-image4.png" class="product-img">
+<p class="review-text">
+"This serum has really improved my skin tone.
+Dark spots have started fading and my skin looks healthier.
+I use it every night before sleeping."
+</p>
+<div class="client-badge">
+<div class="client-name">Hassan Raza</div>
+<div class="client-role">Faisalabad, Pakistan</div>
+<div class="stars">
+<div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
 </div>
 </div>
+</div>
+
+<!-- REVIEW 5 -->
+<div class="feedback-card">
+<img src="main.jpg" class="card-logo">
+<div class="product-title">Product Purchased: Hydrating Face Wash</div>
+<img src="product-image5.png" class="product-img">
+<p class="review-text">
+"I have sensitive skin and most face washes cause irritation.
+This one feels gentle and keeps my skin fresh without dryness.
+Definitely repurchasing."
+</p>
+<div class="client-badge">
+<div class="client-name">Maryam Siddiqui</div>
+<div class="client-role">Multan, Pakistan</div>
+<div class="stars">
+<div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
+</div>
+</div>
+</div>
+
+<!-- REVIEW 6 -->
+<div class="feedback-card">
+<img src="main.jpg" class="card-logo">
+<div class="product-title">Product Purchased: Anti-Aging Cream</div>
+<img src="product-image6.png" class="product-img">
+<p class="review-text">
+"I was worried about fine lines appearing around my eyes.
+After consistent use, my skin feels firmer and looks more youthful.
+Very impressed with the results."
+</p>
+<div class="client-badge">
+<div class="client-name">Bilal Ahmed</div>
+<div class="client-role">Rawalpindi, Pakistan</div>
+<div class="stars">
+<div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
+</div>
+</div>
+</div>
+
+<!-- REVIEW 7 -->
+<div class="feedback-card">
+<img src="main.jpg" class="card-logo">
+<div class="product-title">Product Purchased: Glow Booster Mask</div>
+<img src="product-image7.png" class="product-img">
+<p class="review-text">
+"I use this mask twice a week and it gives instant brightness.
+Perfect before events or family gatherings.
+Skin feels refreshed and clean."
+</p>
+<div class="client-badge">
+<div class="client-name">Zainab Tariq</div>
+<div class="client-role">Peshawar, Pakistan</div>
+<div class="stars">
+<div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
+</div>
+</div>
+</div>
+
+<!-- REVIEW 8 -->
+<div class="feedback-card">
+<img src="main.jpg" class="card-logo">
+<div class="product-title">Product Purchased: Herbal Body Lotion</div>
+<img src="product-image8.png" class="product-img">
+<p class="review-text">
+"This lotion keeps my skin moisturized the whole day.
+It absorbs quickly and doesn’t feel heavy in humid weather.
+Highly recommended."
+</p>
+<div class="client-badge">
+<div class="client-name">Imran Shah</div>
+<div class="client-role">Hyderabad, Pakistan</div>
+<div class="stars">
+<div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
+</div>
+</div>
+</div>
+
 
 <div class="feedback-buttons">
 <button id="prevBtn">Previous</button>
@@ -704,6 +782,39 @@ updateSlide();
 </body>
 </html>
 
+    
+<!-- Feature Start -->
+<div class="container-fluid py-5" style="background-color: #ffe880;">
+    <div class="container">
+        <div class="row g-4">
+            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                <div class="feature-item position-relative" style="background-color: #ffe880; text-align: center; padding: 1rem;">
+                    <div class="border" style="padding: 5rem 1rem; background-color: #ffe880;">
+                        <i class="fa fa-leaf fa-3x" style="color: #333; margin-bottom: 1rem;"></i>
+                        <h5 style="color: #fff; margin-bottom: 0;">100% Natural</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
+                <div class="feature-item position-relative" style="background-color: #ffe880; text-align: center; padding: 1rem;">
+                    <div class="border" style="padding: 5rem 1rem; background-color: #ffe880;">
+                        <i class="fa fa-tint-slash fa-3x" style="color: #333; margin-bottom: 1rem;"></i>
+                        <h5 style="color: #fff; margin-bottom: 0;">Anti Hair Fall</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 wow fadeIn" data-wow-delay="0.5s">
+                <div class="feature-item position-relative" style="background-color: #ffe880; text-align: center; padding: 1rem;">
+                    <div class="border" style="padding: 5rem 1rem; background-color: #ffe880;">
+                        <i class="fa fa-times fa-3x" style="color: #333; margin-bottom: 1rem;"></i>
+                        <h5 style="color: #fff; margin-bottom: 0;">Hypoallergenic</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Feature End -->
 
    <!-- How To Use Start -->
 <div class="container-fluid how-to-use" style="background-color: #ffe880;">
@@ -1116,6 +1227,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
