--- a/index.html
+++ b/index.html
@@ -561,8 +561,8 @@ text-shadow:0 0 8px rgba(255,165,0,0.4);
 <div class="feedback-track" id="feedbackTrack">
 <!-- REVIEW 1 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Night Repair Cream</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image1.png" class="product-img">
 <p class="review-text">
 "I’ve been using this for 5 weeks now and the difference is honestly visible.
@@ -580,8 +580,8 @@ Even my sister noticed the glow!"
 
 <!-- REVIEW 2 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Hand & Feet Cream</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image2.png" class="product-img">
 <p class="review-text">
 "My hands used to get extremely dry especially in winter.
@@ -599,8 +599,8 @@ The fragrance is also very pleasant."
 
 <!-- REVIEW 3 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Brightening Polish</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image3.png" class="product-img">
 <p class="review-text">
 "I noticed smoother skin texture within just two weeks.
@@ -618,8 +618,8 @@ Totally worth the price."
 
 <!-- REVIEW 4 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Vitamin C Serum</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image4.png" class="product-img">
 <p class="review-text">
 "This serum has really improved my skin tone.
@@ -637,8 +637,8 @@ I use it every night before sleeping."
 
 <!-- REVIEW 5 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Hydrating Face Wash</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image5.png" class="product-img">
 <p class="review-text">
 "I have sensitive skin and most face washes cause irritation.
@@ -656,8 +656,8 @@ Definitely repurchasing."
 
 <!-- REVIEW 6 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Anti-Aging Cream</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image6.png" class="product-img">
 <p class="review-text">
 "I was worried about fine lines appearing around my eyes.
@@ -675,8 +675,8 @@ Very impressed with the results."
 
 <!-- REVIEW 7 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Glow Booster Mask</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image7.png" class="product-img">
 <p class="review-text">
 "I use this mask twice a week and it gives instant brightness.
@@ -694,8 +694,8 @@ Skin feels refreshed and clean."
 
 <!-- REVIEW 8 -->
 <div class="feedback-card">
-<img src="main.jpg" class="card-logo">
-<div class="product-title">Product Purchased: Herbal Body Lotion</div>
+<img src="logo.jpg" class="card-logo">
+<div class="product-title">Product Purchased</div>
 <img src="product-image8.png" class="product-img">
 <p class="review-text">
 "This lotion keeps my skin moisturized the whole day.
@@ -1227,6 +1227,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
