--- a/index.html
+++ b/index.html
@@ -541,19 +541,20 @@ body{
 <section class="feedback-section">
 
 <h2 class="feedback-title" style="
-text-align:center;
-font-size:28px;
-font-weight:800;
-font-family:'Poppins',sans-serif;
-background:linear-gradient(45deg,#ffb300,#ff6f00,#ffcc00);
--webkit-background-clip:text;
--webkit-text-fill-color:transparent;
-letter-spacing:1px;
-margin:20px 0;
-text-transform:uppercase;
-text-shadow:0 0 8px rgba(255,165,0,0.4);
+    text-align:center;
+    font-size:22px; /* Font size */
+    font-weight:800;
+    font-family:'Dancing Script', cursive; /* More attractive font */
+    color: white; /* Text color */
+    letter-spacing: 1px;
+    margin: 20px 0;
+    text-transform: uppercase;
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.6); /* Subtle shadow */
+    background: linear-gradient(45deg, #ffb300, #ff6f00, #ffcc00); /* Gradient background effect */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 ">
- What Our Clients Say 
+    What Our Clients Say 
 </h2>
 
 
@@ -1227,6 +1228,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
