--- a/index.html
+++ b/index.html
@@ -541,18 +541,18 @@ body{
 <section class="feedback-section">
 
 <h2 class="feedback-title" style="
-    text-align:center;
-    font-size:22px; /* Font size */
-    font-weight:800;
-    font-family:'Dancing Script', cursive; /* More attractive font */
+    text-align: center;
+    font-size: 24px; 
+    font-weight: 800;
+    font-family: 'Dancing Script', cursive; 
     color: white; /* Text color */
     letter-spacing: 1px;
     margin: 20px 0;
     text-transform: uppercase;
-    text-shadow: 0 0 8px rgba(255, 255, 255, 0.6); /* Subtle shadow */
-    background: linear-gradient(45deg, #ffb300, #ff6f00, #ffcc00); /* Gradient background effect */
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    text-shadow: 
+        0 0 10px rgba(255, 255, 255, 0.8), /* Bright white glow */
+        0 0 20px rgba(255, 255, 255, 0.5), /* Softer white shadow */
+        0 0 30px rgba(255, 255, 255, 0.3); /* Extra soft outer glow */
 ">
     What Our Clients Say 
 </h2>
@@ -1228,6 +1228,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
