--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ Highly recommended."
 </div>
 </div>
 </div>
-
+</div> </div>
 
 <div class="feedback-buttons">
 <button id="prevBtn">Previous</button>
@@ -1228,6 +1228,7 @@ document.addEventListener("keydown", function(event) {
 <script src="js/main.js"></script>
 </body>
 </html>
+
 
 
 
